[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pergunta5.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Fundo.svg" type="Texture" id=2]
[ext_resource path="res://Fontes/roboto/Roboto-LightItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fontes/roboto/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Imagens/Simbolo5.svg" type="Texture" id=5]
[ext_resource path="res://Imagens/Béquer Amarelo/bequer1.svg" type="Texture" id=6]
[ext_resource path="res://Imagens/Béquer Amarelo/bequer2.svg" type="Texture" id=7]
[ext_resource path="res://Imagens/Béquer Amarelo/bequer3.svg" type="Texture" id=8]
[ext_resource path="res://Imagens/Béquer Amarelo/bequer4.svg" type="Texture" id=9]
[ext_resource path="res://Imagens/certo.svg" type="Texture" id=10]
[ext_resource path="res://Imagens/errado.svg" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]

size = 23
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=8]

default_font = SubResource( 7 )

[node name="Pergunta5" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="." index="0"]

position = Vector2( 554.626, 300.467 )
scale = Vector2( 1.58344, 0.629363 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_top = 3.0
margin_right = 984.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Sabendo que o coeficiente de solubilidade de determinado composto 
é 50g/100mL de água, escolha corretamente a solução de acordo com 
a classificação."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="lblCheck3" type="Label" parent="." index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 454.0
margin_top = 206.0
margin_right = 631.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "3) Saturada com 
corpo de fundo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="lblCheck4" type="Label" parent="." index="3"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 267.0
margin_top = 206.0
margin_right = 423.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "2) Saturada "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck6" type="Label" parent="." index="4"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 659.0
margin_top = 206.0
margin_right = 843.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "4) Supersaturada "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="lblCheck5" type="Label" parent="." index="5"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_top = 206.0
margin_right = 197.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "1) Insaturada "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck11" type="Label" parent="." index="6"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_top = 166.0
margin_right = 197.0
margin_bottom = 233.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "Digite a alternativa que considera correta nas respectivas caixas de texto."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck7" type="Label" parent="." index="7"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 313.0
margin_top = 466.0
margin_right = 352.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "15g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck8" type="Label" parent="." index="8"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 532.0
margin_top = 466.0
margin_right = 571.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "50g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck9" type="Label" parent="." index="9"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 466.0
margin_right = 135.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "60g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="lblCheck10" type="Label" parent="." index="10"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 753.0
margin_top = 466.0
margin_right = 805.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "80g
60ºC"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="BtOk" type="Button" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 857.0
margin_top = 429.0
margin_right = 1009.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OK"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="BtTentarNovamente" type="Button" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 857.0
margin_top = 483.0
margin_right = 1011.0
margin_bottom = 527.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Limpar"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="BtOk2" type="Button" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 856.0
margin_top = 536.0
margin_right = 1013.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continuar"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="Simbolo" type="Sprite" parent="." index="14"]

position = Vector2( 991.299, 84.8742 )
scale = Vector2( 0.452977, 0.41465 )
texture = ExtResource( 5 )

[node name="BequerInsaturado" type="Sprite" parent="." index="15"]

position = Vector2( 350.207, 361.013 )
scale = Vector2( 0.366333, 0.349381 )
texture = ExtResource( 6 )

[node name="BequerSaturado" type="Sprite" parent="." index="16"]

position = Vector2( 559.539, 357.33 )
scale = Vector2( 0.366333, 0.349381 )
texture = ExtResource( 7 )

[node name="BequerSaturaFundo" type="Sprite" parent="." index="17"]

position = Vector2( 778.032, 357.33 )
scale = Vector2( 0.366333, 0.349381 )
texture = ExtResource( 8 )

[node name="BequerSuperSaturado" type="Sprite" parent="." index="18"]

position = Vector2( 130.752, 357.33 )
scale = Vector2( 0.366333, 0.349381 )
texture = ExtResource( 9 )

[node name="TextEdit" type="TextEdit" parent="." index="19"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 363.0
margin_right = 48.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="TextEdit2" type="TextEdit" parent="." index="20"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 227.0
margin_top = 363.0
margin_right = 268.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="TextEdit3" type="TextEdit" parent="." index="21"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 437.0
margin_top = 363.0
margin_right = 478.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="TextEdit4" type="TextEdit" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 655.0
margin_top = 363.0
margin_right = 696.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="Certo" type="Sprite" parent="." index="23"]

visible = false
position = Vector2( 960.722, 385.973 )
scale = Vector2( 0.399204, 0.35626 )
texture = ExtResource( 10 )

[node name="Errado" type="Sprite" parent="." index="24"]

visible = false
position = Vector2( 940.722, 385.973 )
scale = Vector2( 0.399204, 0.35626 )
texture = ExtResource( 11 )

[connection signal="pressed" from="BtOk" to="." method="_on_BtOk_pressed"]

[connection signal="pressed" from="BtTentarNovamente" to="." method="_on_BtTentarNovamente_pressed"]

[connection signal="pressed" from="BtOk2" to="." method="_on_BtOk2_pressed"]


